2012-05-07  Helmut Eller  <heller@common-lisp.net>

	Ignore linebreaks for the macroexpand test.
	SBCL should now also pass it.

	* slime.el (slime-test-macroexpansion=): New function.
	([test] macroexpand): Use it.

2012-05-06  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (condition-timed-wait): Undo previous change.
	The :timeout arg doesn't seem ready for production use.

2012-05-06  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (condition-timed-wait): Use the :timeout
	argument of sb-thread:condition-wait if supported.


2012-05-06  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (with-definition-source): Forgot to commit this
	one.

	* swank-allegro.lisp (string-to-utf8): Set the :null-terminate
	argument of excl:string-to-octets to nil.

2012-05-06  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (with-struct): Undo damage.
	* swank-sbcl.lisp (with-definition-source): New macro.

2012-05-06  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp, swank-rpc.lisp: iso-8859-1 is not same as
	latin-1-unix.

2012-05-06  Cyrus Harmon <ch-slime@bobobeach.com>
	    Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pprint-eval-region): New command. No keybinding
	though.

2012-05-04  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp: Remove the SB-C::MERGE-TAIL-CALLS proclamation.
	It does nothing, and never did, actually.

2012-05-03  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-goto-source-location): Allow for
	:buffer-and-file locations, prefer buffer if the buffer exists.

	* swank-sbcl.lisp (definition-source-for-emacs): Send
	:buffer-and-file when both are available.
	(quit-lisp): Use sb-ext:exit when it's present.

2012-05-03  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (find-definitions-find-symbol): Put back accidentally
	removed with-buffer-syntax.

2012-05-02  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (*find-definitions-right-trim*)